Fixed: close icon appeared on modal. CSS properties overlappped.

--- a/src/components/AddItemModal/AddItemModal.css
+++ b/src/components/AddItemModal/AddItemModal.css
@@ -1,4 +1,5 @@
 .modal__label {
+  background-image: url(../../assets/closeIconGrey.svg) center no-repeat;
 }
 
 .modal__label_type_radio {
