--- a/src/components/DeleteConfirmModal/DeleteConfirmModal.css
+++ b/src/components/DeleteConfirmModal/DeleteConfirmModal.css
@@ -38,7 +38,6 @@
   position: absolute;
   top: 16px;
   right: 16px;
-  background: none;
   border: none;
   cursor: pointer;
   z-index: 1001;
